[gd_scene load_steps=15 format=2]

[ext_resource path="res://Fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/starscore7.png" type="Texture" id=2]
[ext_resource path="res://Scripts/controlBestScore.gd" type="Script" id=3]
[ext_resource path="res://Audio/UI_Audio/best_score2.ogg" type="AudioStream" id=4]
[ext_resource path="res://Assets/star_anim/star_0.png" type="Texture" id=5]
[ext_resource path="res://Assets/star_anim/star_2.png" type="Texture" id=6]
[ext_resource path="res://Assets/star_anim/star_3.png" type="Texture" id=7]
[ext_resource path="res://Assets/star_anim/star_1.png" type="Texture" id=8]
[ext_resource path="res://Assets/star_anim/star_4.png" type="Texture" id=9]
[ext_resource path="res://Assets/star_anim/star_6.png" type="Texture" id=10]
[ext_resource path="res://Assets/star_anim/star_5.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 8 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 10 ) ],
"loop": true,
"name": "star_anim",
"speed": 7.0
} ]

[sub_resource type="DynamicFont" id=1]
size = 22
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = -1
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 29
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 1
font_data = ExtResource( 1 )

[node name="BestScore" type="VBoxContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="controlBestScore" type="Control" parent="."]
margin_right = 40.0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="controlBestScore"]
position = Vector2( -30, 36 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="controlBestScore"]
visible = false
position = Vector2( -30, 36 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 3 )
animation = "star_anim"

[node name="textBestScore" type="Label" parent="controlBestScore"]
margin_left = -61.637
margin_top = -19.4545
margin_right = 170.363
margin_bottom = 20.5455
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.282353, 0.294118, 0.968627, 1 )
text = "Best Score:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="numBestScore" type="Label" parent="controlBestScore"]
margin_left = 14.0
margin_top = 26.0
margin_right = 133.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 2 )
text = "1600"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bestScoreAudio" type="AudioStreamPlayer" parent="controlBestScore"]
stream = ExtResource( 4 )

[node name="Timer" type="Timer" parent="controlBestScore"]
wait_time = 1.3
one_shot = true

[connection signal="timeout" from="controlBestScore/Timer" to="controlBestScore" method="_on_Timer_timeout"]
